# project-reachy-emotion

./: .deploy-timestamp  .gitignore  .windsurfrules  =0.29.0  AGENTS.md  AGENTS_08.4.2.md  API_ENDPOINT_REFERENCE.md  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  CNAME  CONFIG_UPDATE_GUIDE.md  DATABASE_INTEGRATION_IMPLEMENTATION_SUMMARY.md  DATABASE_INTEGRATION_PLAN.md  DATABASE_INTEGRATION_RECOMMENDATIONS.md  DEPLOYMENT_UBUNTU2.md  DEVELOPMENT_PLAN_08.4.3.md  DOCUMENTATION_AUDIT_RECOMMENDATIONS.md  ENDPOINT_ARCHITECTURE_ANALYSIS.md  ENDPOINT_FIX_SUMMARY.md  ENDPOINT_REWRITE_ACTION_PLAN.md  ENDPOINT_REWRITE_COMPLETE_SUMMARY.md  ENDPOINT_REWRITE_FINAL_SUMMARY.md  ENDPOINT_REWRITE_PROJECT_COMPLETE.md  ENDPOINT_REWRITE_SESSION1_SUMMARY.md  ENDPOINT_REWRITE_SUMMARY.md  ENDPOINT_TEST_PLAN.md  ENDPOINT_TEST_PLAN_CORRECTED.md  GATEWAY_PROXY_ANALYSIS.md  GATEWAY_SUMMARY.md  IMPLEMENTATION_STATUS.md  LM_STUDIO_INTEGRATION_SUMMARY.md  METADATA_IMPLEMENTATION_PLAN.md  ML_INTEGRATION_STATUS.md  ML_TRAINING_PIPELINE_EXPLAINED.md  Makefile  N8N_QUICK_CONFIG_GUIDE.md  NEXT_SESSION_QUICK_START.md  NEXT_STEPS_ACTION_PLAN.md  NEXT_STEPS_PRIORITIZED.md  NGINX_HTTPS_SETUP.md  (+56 more)
assets/: index-BcalEd9z.js  index-C6BgnIh9.css  index-DA61fB5E.js  index-DVFVdB7S.css  index-NOvYDVOH.css  index-YFAllvb1.js  index-bRPGy_GW.js  index-uKo4UaJ2.js
docs/: AFFECTNET_DATABASE_REGISTRATION.md  AFFECTNET_QUERY_EXAMPLES.md  AUTOMATIC_RENAME_SETUP.md  DATASET_CREATION_WORKFLOW.md  GPT_5.1_CODEX_COMPLETE_Phase 1_Statistical Analysis Code.md  IMPLEMENTATION_SUMMARY_LUMA.md  LUMA_N8N_INTEGRATION_GUIDE.md  PM_CHEAT_SHEET.md  PM_CHEET_SHEET.md  PM_ONBOARDING_GUIDE.md  QUICK_START_LUMA.md  RESEARCH_PAPER.md  SYSTEM_DESCRIPTION.md  UI_Requirements.md  VIDEO_INGESTION_GUIDE.md  dataset_creation_complete_guide_v08.4.3.md  dataset_creation_fixes_v08.4.3.md  endpoints.md  health_endpoint_walkthrough.md  health_endpoint_walkthrough_BAK.md  landing_page_screen_shot_index.md  legacy_code_cleanup_v08.4.3.md  project_checklist_backend_01.md  promotion_pipeline_v4.1.md  video_pipeline_review_2026-02-16.md
inference/: create_quick_data.py  quick_inference.py  quick_train.py
jetson/: deepstream_wrapper.py  deploy.sh  emotion_client.py  emotion_main.py  gate_b_validator.py  gesture_exec.py  health_server.py
memory-bank/: BAK_requirements.md  README.md  gitignore  index.md  metric-implementation-mapping.md  partial-methods-integration-guide.md  partial-methods-visual-summary.md  requirements.md  requirements_08.4.2.md  statistical-analysis-quality-assessment.md  (+1 more)
(+1042 files in other folders)
