[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "reachy-local-08-3"
version = "0.0.1"
description = "Reachy Local 08.3 monorepo: web UI, FastAPI gateway/media-mover, and shared utilities"
readme = "README.md"
requires-python = ">=3.12"
authors = [
  { name = "Russell Bray", email = "rustybee255@gmail.com" },
]
keywords = ["reachy", "robotics", "deepstream", "tensorrt", "fastapi", "streamlit"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
]
# Core runtime dependencies (aligns with memory-bank/requirements.md §§6,16)
dependencies = [
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "psycopg[binary]>=3.1,<4",
  "fastapi>=0.110",
  "pydantic>=2",
  "uvicorn[standard]>=0.29",
  "orjson>=3.10",
  "PyJWT>=2.8",
  "cryptography>=42",
  "prometheus-client>=0.20",
  "httpx>=0.27",
  "python-multipart>=0.0.9",
  "ffmpeg-python>=0.2",
  "opencv-python-headless>=4.8,<5",
  "jsonschema>=4.23",
  "python-json-logger>=2.0",
  "openai>=1.0",
]

[project.optional-dependencies]
# Streamlit web UI and related tools
web = [
  "streamlit>=1.37",
]
# Training/experiments (kept optional to avoid heavy deps by default)
trainer = [
  "mlflow>=2.14",
]
# Developer tooling
dev = [
  "ruff>=0.5.0",
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "httpx>=0.27",
  "pyright>=1.1.377",
]

[tool.hatch.build.targets.wheel]
# Use src-layout for current code until we migrate to apps/* and shared/*
packages = ["src"]

[tool.ruff]
line-length = 100
indent-width = 4
# Fast defaults + common checks
select = [
  "E", "F", "I",    # pyflakes/pycodestyle/imports
  "B",                # flake8-bugbear
  "UP",               # pyupgrade
]
ignore = [
  # Add rule codes to ignore if needed
]

[tool.ruff.isort]
known-first-party = ["apps", "shared", "gateway", "media_mover", "web_ui", "src"]
profile = "black"

[tool.pyright]
pythonVersion = "3.12"
reportMissingImports = true
reportMissingTypeStubs = false
venvPath = "/home/rusty_admin/venvs"
venv = "tao"
include = ["src", "apps", "shared", "tests"]
extraPaths = ["/media/rusty_admin/project_data/reachy_emotion"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src", "apps"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
